# crypto-track

./: Cargo.toml  Trunk.toml  build.rs  index.html  tailwind-78725c24fed4d2d4.css  yew-crypto-tracker-28ebc84dc25625b1_bg.wasm  yew-crypto-tracker-a540a40b5b27f48.js  yew-crypto-tracker-a540a40b5b27f48_bg.wasm  yew-crypto-tracker-e6a2e5d04bc8c146_bg.wasm  yew-crypto-tracker-fad2251a0aed7140.js  yew-crypto-tracker-fad2251a0aed7140_bg.wasm
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/components/: crypto_card.rs  crypto_list.rs  error.rs  loading.rs  mod.rs  portfolio_item.rs
src/models/: crypto.rs  mod.rs
src/pages/: details.rs  home.rs  mod.rs  not_found.rs  portfolio.rs
src/services/: api.rs  mod.rs
src/store/: mod.rs
