[package]
name = "yew-crypto-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = "0.18.0"
gloo = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwasm = "0.5"
log = "0.4"
wasm-logger = "0.2"
dotenv = "0.15.0"
